# aoc

./: .gitignore  create_structure.py  main.py  readme.md
.github/workflows/: black.yml
archive/: Advent of Code 2025 Leaderboard ｜ Depot (30.12.2025 20：19：18).html
py/2025/1/: 1.py  2.py
py/2025/10/: 1.py  2.py
py/2025/11/: 1.py  2.py
py/2025/12/: 1.py
py/2025/2/: 1.py  2.py
py/2025/3/: 1.py  2.py
py/2025/4/: 1.py  2.py
py/2025/5/: 1.py  2.py
py/2025/6/: 1.py  2.py
py/2025/7/: 1.py  2.py
py/2025/8/: 1.py  2.py
py/2025/9/: 1.py  2.py
rs/2025/: Cargo.toml
rs/2025/src/1/: 1.rs  2.rs
rs/2025/src/10/: 1.rs  2.rs
rs/2025/src/11/: 1.rs  2.rs
rs/2025/src/12/: 1.rs
rs/2025/src/2/: 1.rs  2.rs
rs/2025/src/3/: 1.rs  2.rs
rs/2025/src/4/: 1.rs  2.rs
rs/2025/src/5/: 1.rs  2.rs
rs/2025/src/6/: 1.rs  2.rs
rs/2025/src/7/: 1.rs  2.rs
rs/2025/src/8/: 1.rs  2.rs
rs/2025/src/9/: 1.rs  2.rs
