[package]
name = "aoc2025"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "1_1"
path = "src/1/1.rs"

[[bin]]
name = "1_2"
path = "src/1/2.rs"

[[bin]]
name = "2_1"
path = "src/2/1.rs"

[[bin]]
name = "2_2"
path = "src/2/2.rs"

[[bin]]
name = "3_1"
path = "src/3/1.rs"

[[bin]]
name = "3_2"
path = "src/3/2.rs"

[[bin]]
name = "4_1"
path = "src/4/1.rs"

[[bin]]
name = "4_2"
path = "src/4/2.rs"

[[bin]]
name = "5_1"
path = "src/5/1.rs"

[[bin]]
name = "5_2"
path = "src/5/2.rs"

[[bin]]
name = "6_1"
path = "src/6/1.rs"

[[bin]]
name = "6_2"
path = "src/6/2.rs"

[[bin]]
name = "7_1"
path = "src/7/1.rs"

[[bin]]
name = "7_2"
path = "src/7/2.rs"

[[bin]]
name = "8_1"
path = "src/8/1.rs"

[[bin]]
name = "8_2"
path = "src/8/2.rs"

[[bin]]
name = "9_1"
path = "src/9/1.rs"

[[bin]]
name = "9_2"
path = "src/9/2.rs"

[[bin]]
name = "10_1"
path = "src/10/1.rs"

[[bin]]
name = "10_2"
path = "src/10/2.rs"

[[bin]]
name = "11_1"
path = "src/11/1.rs"

[[bin]]
name = "11_2"
path = "src/11/2.rs"

[[bin]]
name = "12_1"
path = "src/12/1.rs"

[dependencies]
good_lp = { version = "1.14.2", features = ["coin_cbc"] }
regex = "1"
